tests/good/simple_closure/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function foo () 10)
  (function main ()
    (begin
     (let x foo)
     (x)
    )
  )
))
